--- a/force-app/main/default/pages/GeneralSLDS.page
+++ b/force-app/main/default/pages/GeneralSLDS.page
@@ -40,7 +40,7 @@ Created by Thaddaeus Dahlberg on 2/15/2020.
             </div>
         </div>
     </div>
-    <script src="{!URLFOR($Resource.SummitEventsAssets, '/js/loading.js')}" type="text/javascript"/>
+    <script src="{!URLFOR($Resource.SummitEventsAssets, '/js/loading.js')}" type="text/javascript"></script>
     </body>
     </html>
 </apex:page>
