--- a/force-app/main/default/pages/SummitEventsSubmit.page
+++ b/force-app/main/default/pages/SummitEventsSubmit.page
@@ -15,7 +15,7 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
         <apex:define name="pageTitle"><a href="{!eventPage.Event_Home_Link_URL__c}">{!eventPage.Event_Home_Link_Title__c}</a></apex:define>
         <apex:define name="scriptsHead">
             <link href="{!URLFOR($Resource.SummitEventsAssets, '/css/main.css')}" rel="stylesheet" type="text/css"/>
-            <script src="{!URLFOR($Resource.SummitEventsAssets, '/js/submit.js')}" type="text/javascript"/>
+            <script src="{!URLFOR($Resource.SummitEventsAssets, '/js/submit.js')}" type="text/javascript"></script>
         </apex:define>
         <apex:define name="sectionNav"/>
         <apex:define name="body">
@@ -50,7 +50,7 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
                     <!-- EVENT CLOSED MESSAGE -->
                     <apex:outputPanel styleClass="slds-col slds-p-around_x-small slds-size_1-of-1" rendered="{!eventIsClosed}">
                         <p class="slds-text-body">
-                            <apex:outputText escape="false" value="{!eventPage.Event_Full_Text__c}"></apex:outputText>
+                            <apex:outputText escape="false" value="{!eventPage.Event_Full_Text__c}"/>
                         </p>
                     </apex:outputPanel>
                     <apex:outputPanel rendered="{!!eventIsClosed}" layout="none">
@@ -131,7 +131,7 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
                         </div>
                         <div class="slds-col slds-size_1-of-1 slds-clearfix slds-p-vertical_x-small slds-p-vertical_xx-small">
                             <p class="slds-text-body ">
-                                <apex:outputText escape="false" value="{!EventPage.Event_Footer__c}"></apex:outputText>
+                                <apex:outputText escape="false" value="{!EventPage.Event_Footer__c}"/>
                             </p>
                         </div>
                     </apex:outputPanel>
