--- a/force-app/main/default/pages/SummitEventsRegister.page
+++ b/force-app/main/default/pages/SummitEventsRegister.page
@@ -21,7 +21,7 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
         <apex:define name="body">
             <div class="slds-grid slds-wrap" xmlns="http://www.w3.org/2000/svg" version="1.1">
                 <div class="slds-col slds-p-around_x-small slds-size_1-of-1">
-                    <apex:messages/>
+                    <apex:messages />
                 </div>
 
                 <apex:form id="SummitEventRegisterForm" styleClass="slds-grid slds-wrap" style="width:100%">
@@ -815,51 +815,51 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
 
 
                         <apex:variable value="{!100}" var="count"/>
-                        <apex:repeat value="{!eventQuestions}" var="qu">
-                            <apex:variable var="isRequired" value="{!qu.Required_For_Registrant__c}"/>
-                            <apex:variable value="{!count+1}" var="count"/>
-                            <apex:variable var="AddInfoLabel" value="AddInfoLabel{!TEXT(count)}"/>
+<!--                        <apex:repeat value="{!eventQuestions}" var="qu">-->
+<!--                            <apex:variable var="isRequired" value="{!qu.Required_For_Registrant__c}"/>-->
+<!--                            <apex:variable value="{!count+1}" var="count"/>-->
+<!--                            <apex:variable var="AddInfoLabel" value="AddInfoLabel{!TEXT(count)}"/>-->
 
-                            <div class="slds-col slds-p-around_x-small slds-size_1-of-1">
+<!--                            <div class="slds-col slds-p-around_x-small slds-size_1-of-1">-->
 
-                                <div class="slds-form-element {!IF(isRequired, 'slds-is-required', '')}">
+<!--                                <div class="slds-form-element {!IF(isRequired, 'slds-is-required', '')}">-->
 
-                                    <apex:outputLabel for="{!AddInfoLabel}" styleClass="slds-form-element__label">
-                                        {!qu.Question_Text__c}
-                                        <apex:outputText escape="false" rendered="{!isRequired}">
-                                            <abbr class="slds-required" title="required">*</abbr>
-                                        </apex:outputText>
-                                    </apex:outputLabel>
+<!--                                    <apex:outputLabel for="{!AddInfoLabel}" styleClass="slds-form-element__label">-->
+<!--                                        {!qu.Question_Text__c}-->
+<!--                                        <apex:outputText escape="false" rendered="{!isRequired}">-->
+<!--                                            <abbr class="slds-required" title="required">*</abbr>-->
+<!--                                        </apex:outputText>-->
+<!--                                    </apex:outputLabel>-->
 
 
-                                    <apex:outputPanel layout="block" styleClass="slds-form-element__control">
+<!--                                    <apex:outputPanel layout="block" styleClass="slds-form-element__control">-->
 
-                                        <!--Text area -->
-                                        <apex:outputPanel layout="block" styleClass="slds-form-element__control" rendered="{!IF(CONTAINS(qu.Question_Type__c, 'Text area'), true, false)}">
-                                            <apex:inputTextarea label="{!AddInfoLabel}" value="{!placeholderValue}" styleClass="slds-textarea"/>
-                                        </apex:outputPanel>
+<!--                                        &lt;!&ndash;Text area &ndash;&gt;-->
+<!--                                        <apex:outputPanel layout="block" styleClass="slds-form-element__control" rendered="{!IF(CONTAINS(qu.Question_Type__c, 'Text area'), true, false)}">-->
+<!--                                            <apex:inputTextarea label="{!AddInfoLabel}" value="{!placeholderValue}" styleClass="slds-textarea"/>-->
+<!--                                        </apex:outputPanel>-->
 
-                                        <!--Text box-->
-                                        <apex:outputPanel layout="block" styleClass="slds-form-element__control" rendered="{!IF(CONTAINS(qu.Question_Type__c,'Text box'), true, false)}">
-                                            <apex:inputField label="{!AddInfoLabel}" value="{!placeholderValue}" styleClass="slds-input"/>
-                                        </apex:outputPanel>
+<!--                                        &lt;!&ndash;Text box&ndash;&gt;-->
+<!--                                        <apex:outputPanel layout="block" styleClass="slds-form-element__control" rendered="{!IF(CONTAINS(qu.Question_Type__c,'Text box'), true, false)}">-->
+<!--                                            <apex:inputField label="{!AddInfoLabel}" value="{!placeholderValue}" styleClass="slds-input"/>-->
+<!--                                        </apex:outputPanel>-->
 
-                                        <!--Pick List-->
-                                        <apex:outputPanel layout="block" styleClass="slds-select_container" rendered="{!IF(CONTAINS(qu.Question_Type__c, 'Pick-list'), true, false)}">
+<!--                                        &lt;!&ndash;Pick List&ndash;&gt;-->
+<!--                                        <apex:outputPanel layout="block" styleClass="slds-select_container" rendered="{!IF(CONTAINS(qu.Question_Type__c, 'Pick-list'), true, false)}">-->
 
-                                            <apex:selectList label="{!AddInfoLabel}" value="{!placeholderValue}" size="1" styleClass="slds-select">
-                                                <apex:selectOptions value="{!getCreateVFPicklist}">
-                                                    <apex:param name="site" value="{!qu.Question_Pick_List__c}" assignTo="{!picklistStringToFormat}"/>
-                                                </apex:selectOptions>
-                                            </apex:selectList>
+<!--                                            <apex:selectList label="{!AddInfoLabel}" value="{!placeholderValue}" size="1" styleClass="slds-select">-->
+<!--                                                <apex:selectOptions value="{!getCreateVFPicklist}">-->
+<!--                                                    <apex:param name="site" value="{!qu.Question_Pick_List__c}" assignTo="{!picklistStringToFormat}"/>-->
+<!--                                                </apex:selectOptions>-->
+<!--                                            </apex:selectList>-->
 
-                                        </apex:outputPanel>
+<!--                                        </apex:outputPanel>-->
 
-                                    </apex:outputPanel>
-                                </div>
-                            </div>
+<!--                                    </apex:outputPanel>-->
+<!--                                </div>-->
+<!--                            </div>-->
 
-                        </apex:repeat>
+<!--                        </apex:repeat>-->
 
                         <!-- Submit buttons -->
                         <div class="slds-col slds-p-vertical_medium slds-p-left_x-small slds-size_1-of-1">
