--- a/force-app/main/default/pages/SummitEventsRegisterGuests.page
+++ b/force-app/main/default/pages/SummitEventsRegisterGuests.page
@@ -16,6 +16,7 @@
             <script src="{!URLFOR($Resource.SummitEventsAssets, '/js/sldsHelper.js')}" type="text/javascript"></script>
             <script>
                 const guestQuestionJSON = {!guestQuestionJSON};
+                const guestMaxAmount = {!eventPage.Guest_Max_Amount__c};
             </script>
         </apex:define>
         <apex:define name="sectionNav"/>
@@ -23,7 +24,7 @@
 
             <div class="slds-grid slds-wrap" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1">
                 <div class="slds-col slds-p-around_x-small slds-size_1-of-1">
-                    <apex:messages />
+                    <apex:messages/>
                 </div>
 
                 <!-- EVENT BREADCRUMB -->
@@ -50,7 +51,7 @@
                 </div>
 
                 <!-- EVENT CLOSED MESSAGE -->
-                <div class="slds-grid slds-wrap">
+                <div class="slds-grid slds-wrap" style="width:100%;">
                     <apex:outputPanel styleClass="slds-col slds-p-vertical_x-small slds-size_1-of-1 slds-medium-size_12-of-12 slds-large-size_12-of-12" rendered="{!eventIsClosed}">
                         <p class="slds-text-body">
                             <apex:outputText escape="false" value="{!eventPage.Event_Full_Text__c}"/>
@@ -85,7 +86,7 @@
                                                 <svg class="slds-button__icon slds-button__icon_small slds-button__icon_left" aria-hidden="true">
                                                   <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="/apexpages/slds/latest/assets/icons/utility-sprite/svg/symbols.svg#add"></use>
                                                 </svg>
-                                                Add a guest
+                                                Register Guest
                                             </span>
                                         </button>
                                     </footer>
